// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logCollapseGeneratedAnswer with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "expand",
    "answer": {
      "id": "123",
      "type": "RGA",
    },
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logCopyGeneratedAnswer with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "copyToClipboard",
    "answer": {
      "id": "123",
      "type": "RGA",
    },
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logDislikeGeneratedAnswer with the right payload 1`] = `
[
  "Qna.SubmitFeedback",
  {
    "answer": {
      "id": "123",
      "type": "RGA",
    },
    "feedback": {
      "liked": false,
    },
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logExpandGeneratedAnswer with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "expand",
    "answer": {
      "id": "123",
      "type": "RGA",
    },
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logGeneratedAnswerDetailedFeedback with the right payload 1`] = `
[
  "Qna.SubmitFeedback",
  {
    "answer": {
      "id": "123",
      "type": "RGA",
    },
    "feedback": {
      "details": "example details",
      "liked": false,
      "reason": "other",
    },
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logGeneratedAnswerHideAnswers with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "hide",
    "answer": {
      "id": "123",
      "type": "RGA",
    },
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logGeneratedAnswerShowAnswers with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "show",
    "answer": {
      "id": "123",
      "type": "RGA",
    },
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logHoverCitation with the right payload 1`] = `
[
  "Qna.CitationHover",
  {
    "answer": {
      "id": "123",
      "type": "RGA",
    },
    "citation": {
      "id": "some-citation-id",
      "type": "Source",
    },
    "citationHoverTimeInMs": 1234,
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logLikeGeneratedAnswer with the right payload 1`] = `
[
  "Qna.SubmitFeedback",
  {
    "answer": {
      "id": "123",
      "type": "RGA",
    },
    "feedback": {
      "liked": true,
    },
  },
]
`;

exports[`generated answer analytics actions when analyticsMode is \`next\` should log #logOpenGeneratedAnswerSource with the right payload 1`] = `
[
  "Qna.CitationClick",
  {
    "answer": {
      "id": "123",
      "type": "RGA",
    },
    "citation": {
      "id": "some-citation-id",
      "type": "Source",
    },
  },
]
`;
